@@ -14,7 +14,7 @@
   var options_sapus = {
     /* this array must be a subset of the columns that are "send to iPhone" */
     /* cc_pos is a virtual column. It doesn't exist in cocoslive, but it is simulated in the widget */
-    'columns' : [ 'cc_pos', 'cc_score', 'cc_country', 'usr_playername', 'usr_angle', 'usr_speed'],
+    'columns' : [ 'cc_pos', 'cc_score', 'cc_country', 'cc_playername', 'usr_angle', 'usr_speed'],
 
     /* Name of the columns. Display it in your onw language */
     'columnsNames' : ['Pos', 'Score','Country', 'Player Name', 'Angle', 'Speed'],
