@@ -1,6 +1,7 @@
 v0.3.3: 14-Jul-2009
  . API: Possibility to delete scores when rankings are enabled
  . Admin: Easier to list games and developers
+ . Examples: updated examples. Don't use usr_playername. Instead use cc_playername
 
 v0.3.2: dd-Jun-2009
  . API: Can't delete scores when rankings are enabled
